--- a/src/pages/docs/border-width.mdx
+++ b/src/pages/docs/border-width.mdx
@@ -20,19 +20,19 @@ Use the `border`, `.border-0`, `.border-2`, `.border-4`, or `.border-8` utilitie
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border</p>
-      <div class="p-4 shadow-sm bg-white w-16 h-16 border-indigo-600 border"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-600 dark:border-light-blue-500 border"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-2</p>
-      <div class="p-4 shadow-sm bg-white w-16 h-16 border-indigo-600 border-2"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-600 dark:border-light-blue-500 border-2"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-4</p>
-      <div class="p-4 shadow-sm bg-white w-16 h-16 border-indigo-600 border-4"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-600 dark:border-light-blue-500 border-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-8</p>
-      <div class="p-4 shadow-sm bg-white w-16 h-16 border-indigo-600 border-8"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-600 dark:border-light-blue-500 border-8"></div>
     </div>
   </div>
 </Example>
@@ -52,19 +52,19 @@ Use the `border-{side}`, `.border-{side}-0`, `.border-{side}-2`, `.border-{side}
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-t-4</p>
-      <div class="p-4 shadow-sm bg-white ring-1 ring-gray-900/5 w-16 h-16 border-indigo-500 border-t-4"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-t-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-r-4</p>
-      <div class="p-4 shadow-sm bg-white ring-1 ring-gray-900/5 w-16 h-16 border-indigo-500 border-r-4"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-r-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-b-4</p>
-      <div class="p-4 shadow-sm bg-white ring-1 ring-gray-900/5 w-16 h-16 border-indigo-500 border-b-4"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-b-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-l-4</p>
-      <div class="p-4 shadow-sm bg-white ring-1 ring-gray-900/5 w-16 h-16 border-indigo-500 border-l-4"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-l-4"></div>
     </div>
   </div>
 </Example>
@@ -84,11 +84,11 @@ Use the `border-{x|y}-{width}` utilities to set the border width on two sides of
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-x-4</p>
-      <div class="p-4 shadow-sm bg-white ring-1 ring-gray-900/5 w-16 h-16 border-indigo-500 border-x-4"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-x-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-y-4</p>
-      <div class="p-4 shadow-sm bg-white ring-1 ring-gray-900/5 w-16 h-16 border-indigo-500 border-y-4"></div>
+      <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-y-4"></div>
     </div>
   </div>
 </Example>
@@ -103,10 +103,10 @@ Use the `border-{x|y}-{width}` utilities to set the border width on two sides of
 You can also add borders between child elements using the `divide-{x/y}-{width}` and `divide-{color}` utilities.
 
 <Example p="none">
-  <div class="flex flex-col divide-y divide-gray-200 font-mono text-white text-sm text-center font-bold leading-6 shadow-lg overflow-hidden max-w-sm mx-auto">
-    <div class="p-4 text-gray-400 bg-white">01</div>
-    <div class="p-4 text-gray-400 bg-white">02</div>
-    <div class="p-4 text-gray-400 bg-white">03</div>
+  <div class="flex flex-col divide-y divide-gray-200 dark:divide-gray-200/5 font-mono text-white text-sm text-center font-bold leading-6 shadow-lg overflow-hidden max-w-sm mx-auto">
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">01</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">02</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">03</div>
   </div>
 </Example>
 
