--- a/src/pages/docs/plugins.mdx
+++ b/src/pages/docs/plugins.mdx
@@ -78,7 +78,7 @@ The `@tailwindcss/typography` plugin adds a set of `prose` classes that can be u
 </article>
 ```
 
-[Learn more about the typography plugin &rarr;](https://github.com/tailwindlabs/tailwindcss-typography)
+[Learn more about the typography plugin &rarr;](/docs/typography-plugin)
 
 ### Forms
 
