--- a/src/pages/docs/outline-color.mdx
+++ b/src/pages/docs/outline-color.mdx
@@ -18,18 +18,18 @@ export const classes = { utilities }
 Use the `outline-{color}` utilities to change the color of an element's outline.
 
 <Example>
-  <div class="flex flex-col sm:flex-row items-center justify-center gap-8 sm:gap-16 font-bold text-sm text-white text-center font-bold">
+  <div class="flex flex-col sm:flex-row items-center justify-center gap-8 sm:gap-16 font-bold text-sm text-white text-center">
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-blue-500</p>
-      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-blue-500">Button A</button>
+      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-blue-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button A</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-cyan-500</p>
-      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-cyan-500">Button B</button>
+      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-cyan-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button B</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-pink-500</p>
-      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-pink-500">Button C</button>
+      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-pink-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button C</button>
     </div>
   </div>
 </Example>
@@ -45,10 +45,10 @@ Use the `outline-{color}` utilities to change the color of an element's outline.
 Control the opacity of an element's outline color using the color opacity modifier.
 
 <Example>
-  <div class="text-center font-bold text-sm text-center font-bold text-white">
+  <div class="text-center font-bold text-sm text-white">
     <div class="flex flex-col items-center shrink-0">
       <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-blue-500/50</p>
-      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-blue-500/50">Save Changes</button>
+      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-blue-500/50 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Save Changes</button>
     </div>
   </div>
 </Example>
