--- a/src/pages/docs/cursor.mdx
+++ b/src/pages/docs/cursor.mdx
@@ -28,13 +28,13 @@ Use the `cursor-{style}` to control which cursor is displayed when hovering over
 
 <Example hint="Hover over each button to see the cursor change">
   <div class="flex flex-col sm:flex-row gap-4 sm:gap-0 items-center justify-around">
-    <button type="button" class="w-full sm:w-auto py-2 px-3 bg-indigo-600 hover:bg-indigo-700 disabled:bg-indigo-300 text-white text-sm font-semibold rounded-md shadow focus:outline-none cursor-pointer" tabindex="-1">
+    <button type="button" class="w-full sm:w-auto py-2 px-3 bg-indigo-600 hover:bg-indigo-700 disabled:bg-indigo-300 dark:disabled:bg-indigo-800 text-white dark:disabled:text-indigo-400 text-sm font-semibold rounded-md shadow focus:outline-none cursor-pointer" tabindex="-1">
       Submit
     </button>
-    <button type="button" class="w-full sm:w-auto py-2 px-3 bg-indigo-600 hover:bg-indigo-700 disabled:bg-indigo-300 text-white text-sm font-semibold rounded-md shadow focus:outline-none cursor-progress" tabindex="-1">
+    <button type="button" class="w-full sm:w-auto py-2 px-3 bg-indigo-600 hover:bg-indigo-700 disabled:bg-indigo-300 dark:disabled:bg-indigo-800 text-white dark:disabled:text-indigo-400 text-sm font-semibold rounded-md shadow focus:outline-none cursor-progress" tabindex="-1">
       Saving...
     </button>
-    <button type="button" class="w-full sm:w-auto py-2 px-3 bg-indigo-600 hover:bg-indigo-700 disabled:bg-indigo-300 text-white text-sm font-semibold rounded-md shadow focus:outline-none cursor-not-allowed" tabindex="-1" disabled>
+    <button type="button" class="w-full sm:w-auto py-2 px-3 bg-indigo-600 hover:bg-indigo-700 disabled:bg-indigo-300 dark:disabled:bg-indigo-800 text-white dark:disabled:text-indigo-400 text-sm font-semibold rounded-md shadow focus:outline-none cursor-not-allowed" tabindex="-1" disabled>
       Confirm
     </button>
   </div>
