Revert text color changes

--- a/src/pages/docs/divide-style.mdx
+++ b/src/pages/docs/divide-style.mdx
@@ -24,9 +24,9 @@ Control the border style between elements using the `divide-{style}` utilities.
 
 <Example p="none">
   <div class="grid grid-cols-1 divide-dashed divide-y font-mono text-sm text-center font-bold leading-6 shadow-lg overflow-hidden max-w-sm mx-auto dark:divide-gray-700">
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">01</div>
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">02</div>
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">03</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">01</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">02</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">03</div>
   </div>
 </Example>
 
