--- a/src/pages/docs/divide-width.mdx
+++ b/src/pages/docs/divide-width.mdx
@@ -37,9 +37,9 @@ Add borders between horizontal elements using the `divide-x-{width}` utilities.
 
 <Example>
   <div class="grid grid-cols-3 divide-x font-mono text-sm text-center font-bold leading-6 rounded-lg shadow-lg overflow-hidden dark:divide-gray-700">
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">01</div>
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">02</div>
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">03</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">01</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">02</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">03</div>
   </div>
 </Example>
 
@@ -57,9 +57,9 @@ Add borders between stacked elements using the `divide-y-{width}` utilities.
 
 <Example p="none">
   <div class="grid grid-cols-1 divide-y font-mono text-sm text-center font-bold leading-6 shadow-lg overflow-hidden max-w-sm mx-auto dark:divide-gray-700">
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">01</div>
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">02</div>
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">03</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">01</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">02</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">03</div>
   </div>
 </Example>
 
@@ -77,9 +77,9 @@ If your elements are in reverse order (using say `flex-row-reverse` or `flex-col
 
 <Example p="none">
   <div class="flex flex-col-reverse divide-y divide-y-reverse font-mono text-sm text-center font-bold leading-6 shadow-lg overflow-hidden max-w-sm mx-auto dark:divide-gray-700">
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">01</div>
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">02</div>
-    <div class="p-4 text-gray-500 bg-white dark:bg-gray-800 dark:text-gray-400">03</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">01</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">02</div>
+    <div class="p-4 text-gray-400 bg-white dark:bg-gray-800">03</div>
   </div>
 </Example>
 
