--- a/src/pages/docs/overflow.mdx
+++ b/src/pages/docs/overflow.mdx
@@ -16,11 +16,11 @@ export const classes = { utilities }
 Use `overflow-visible` to prevent content within an element from being clipped. Note that any content that overflows the bounds of the element will then be visible.
 
 <Example>
-  <div class="overflow-visible relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6">
+  <div class="overflow-visible relative max-w-sm mx-auto bg-white dark:bg-gray-800 shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6 dark:bg-gray-800 dark:highlight-white/5">
     <img class="absolute -left-6 w-24 h-24 rounded-full shadow-lg" src="https://images.unsplash.com/photo-1501196354995-cbb51c65aaea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
     <div class="flex flex-col py-5 pl-24">
-      <strong class="text-gray-900 text-sm font-medium">Andrew Alfred</strong>
-      <span class="text-gray-500 text-sm font-medium">Technical advisor</span>
+      <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Andrew Alfred</strong>
+      <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Technical advisor</span>
     </div>
   </div>
 </Example>
@@ -34,11 +34,11 @@ Use `overflow-visible` to prevent content within an element from being clipped. 
 Use `overflow-hidden` to clip any content within an element that overflows the bounds of that element.
 
 <Example>
-  <div class="overflow-hidden relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6">
+  <div class="overflow-hidden relative max-w-sm mx-auto bg-white dark:bg-gray-800 shadow-lg ring-1 ring-black/5 rounded-xl flex items-center gap-6 dark:bg-gray-800 dark:highlight-white/5">
     <img class="absolute -left-6 w-24 h-24 rounded-full shadow-lg" src="https://images.unsplash.com/photo-1501196354995-cbb51c65aaea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
     <div class="flex flex-col py-5 pl-24">
-      <strong class="text-gray-900 text-sm font-medium">Andrew Alfred</strong>
-      <span class="text-gray-500 text-sm font-medium">Technical advisor</span>
+      <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Andrew Alfred</strong>
+      <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Technical advisor</span>
     </div>
   </div>
 </Example>
@@ -52,33 +52,33 @@ Use `overflow-hidden` to clip any content within an element that overflows the b
 Use `overflow-auto` to add scrollbars to an element in the event that its content overflows the bounds of that element. Unlike `.overflow-scroll`, which always shows scrollbars, this utility will only show them if scrolling is necessary.
 
 <Example>
-  <div class="overflow-auto h-72 relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex flex-col divide-y">
+  <div class="overflow-auto h-72 relative max-w-sm mx-auto bg-white dark:bg-gray-800 dark:highlight-white/5 shadow-lg ring-1 ring-black/5 rounded-xl flex flex-col divide-y dark:divide-gray-200/5">
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1501196354995-cbb51c65aaea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Andrew Alfred</strong>
-        <span class="text-gray-500 text-sm font-medium">Technical advisor</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Andrew Alfred</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Technical advisor</span>
       </div>
     </div>
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Debra Houston</strong>
-        <span class="text-gray-500 text-sm font-medium">Analyst</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Debra Houston</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Analyst</span>
       </div>
     </div>
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Jane White</strong>
-        <span class="text-gray-500 text-sm font-medium">Director, Marketing</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Jane White</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Director, Marketing</span>
       </div>
     </div>
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Ray Flint</strong>
-        <span class="text-gray-500 text-sm font-medium">Technical Advisor</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Ray Flint</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Technical Advisor</span>
       </div>
     </div>
   </div>
@@ -93,42 +93,42 @@ Use `overflow-auto` to add scrollbars to an element in the event that its conten
 Use `overflow-x-auto` to allow horizontal scrolling if needed.
 
 <Example p="none">
-  <div class="max-w-md mx-auto bg-white shadow-xl min-w-0">
+  <div class="max-w-md mx-auto bg-white shadow-xl min-w-0 dark:bg-gray-800 dark:highlight-white/5">
     <div class="overflow-x-auto flex">
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1501196354995-cbb51c65aaea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
-          <strong class="text-gray-900 text-xs font-medium">Andrew</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Andrew</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
-          <strong class="text-gray-900 text-xs font-medium">Emily</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Emily</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1502685104226-ee32379fefbe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
-          <strong class="text-gray-900 text-xs font-medium">Whitney</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Whitney</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1519345182560-3f2917c472ef?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
-          <strong class="text-gray-900 text-xs font-medium">David</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">David</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
-          <strong class="text-gray-900 text-xs font-medium">Kristin</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Kristin</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1605405748313-a416a1b84491?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
-          <strong class="text-gray-900 text-xs font-medium">Sarah</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Sarah</strong>
         </div>
       </div>
     </div>
@@ -144,33 +144,33 @@ Use `overflow-x-auto` to allow horizontal scrolling if needed.
 Use `overflow-y-auto` to allow vertical scrolling if needed.
 
 <Example>
-  <div class="overflow-y-auto h-72 relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex flex-col divide-y">
+  <div class="overflow-y-auto h-72 relative max-w-sm mx-auto bg-white dark:bg-gray-800 dark:highlight-white/5 shadow-lg ring-1 ring-black/5 rounded-xl flex flex-col divide-y dark:divide-gray-200/5">
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1501196354995-cbb51c65aaea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Andrew Alfred</strong>
-        <span class="text-gray-500 text-sm font-medium">Technical advisor</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Andrew Alfred</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Technical advisor</span>
       </div>
     </div>
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Debra Houston</strong>
-        <span class="text-gray-500 text-sm font-medium">Analyst</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Debra Houston</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Analyst</span>
       </div>
     </div>
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Jane White</strong>
-        <span class="text-gray-500 text-sm font-medium">Director, Marketing</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Jane White</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Director, Marketing</span>
       </div>
     </div>
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Ray Flint</strong>
-        <span class="text-gray-500 text-sm font-medium">Technical Advisor</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Ray Flint</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Technical Advisor</span>
       </div>
     </div>
   </div>
@@ -185,42 +185,42 @@ Use `overflow-y-auto` to allow vertical scrolling if needed.
 Use `overflow-x-scroll` to allow horizontal scrolling and always show scrollbars unless always-visible scrollbars are disabled by the operating system.
 
 <Example p="none">
-  <div class="max-w-md mx-auto bg-white shadow-xl min-w-0">
+  <div class="max-w-md mx-auto bg-white shadow-xl min-w-0 dark:bg-gray-800 dark:highlight-white/5">
     <div class="overflow-x-scroll flex">
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1501196354995-cbb51c65aaea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80"/>
-          <strong class="text-gray-900 text-xs font-medium">Andrew</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Andrew</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80"/>
-          <strong class="text-gray-900 text-xs font-medium">Emily</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Emily</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1502685104226-ee32379fefbe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80"/>
-          <strong class="text-gray-900 text-xs font-medium">Whitney</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Whitney</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1519345182560-3f2917c472ef?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80"/>
-          <strong class="text-gray-900 text-xs font-medium">David</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">David</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80"/>
-          <strong class="text-gray-900 text-xs font-medium">Kristin</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Kristin</strong>
         </div>
       </div>
       <div class="flex-none py-6 px-3 first:pl-6 last:pr-6">
         <div class="flex flex-col items-center justify-center gap-3">
           <img class="w-18 h-18 rounded-full" src="https://images.unsplash.com/photo-1605405748313-a416a1b84491?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80"/>
-          <strong class="text-gray-900 text-xs font-medium">Sarah</strong>
+          <strong class="text-gray-900 text-xs font-medium dark:text-gray-200">Sarah</strong>
         </div>
       </div>
     </div>
@@ -236,33 +236,33 @@ Use `overflow-x-scroll` to allow horizontal scrolling and always show scrollbars
 Use `overflow-y-scroll` to allow vertical scrolling and always show scrollbars unless always-visible scrollbars are disabled by the operating system.
 
 <Example>
-  <div class="overflow-y-scroll h-72 relative max-w-sm mx-auto bg-white shadow-lg ring-1 ring-black/5 rounded-xl flex flex-col divide-y">
+  <div class="overflow-y-scroll h-72 relative max-w-sm mx-auto bg-white dark:bg-gray-800 shadow-lg ring-1 ring-black/5 rounded-xl flex flex-col divide-y dark:divide-gray-200/5">
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1501196354995-cbb51c65aaea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Andrew Alfred</strong>
-        <span class="text-gray-500 text-sm font-medium">Technical advisor</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Andrew Alfred</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Technical advisor</span>
       </div>
     </div>
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Debra Houston</strong>
-        <span class="text-gray-500 text-sm font-medium">Analyst</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Debra Houston</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Analyst</span>
       </div>
     </div>
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Jane White</strong>
-        <span class="text-gray-500 text-sm font-medium">Director, Marketing</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Jane White</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Director, Marketing</span>
       </div>
     </div>
     <div class="flex items-center gap-4 p-4">
       <img class="w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=4&w=256&h=256&q=80" />
       <div class="flex flex-col">
-        <strong class="text-gray-900 text-sm font-medium">Ray Flint</strong>
-        <span class="text-gray-500 text-sm font-medium">Technical Advisor</span>
+        <strong class="text-gray-900 text-sm font-medium dark:text-gray-200">Ray Flint</strong>
+        <span class="text-gray-500 text-sm font-medium dark:text-gray-400">Technical Advisor</span>
       </div>
     </div>
   </div>
